src/components/Input/Input.css
.vvb-input-1 {
  position: relative;
  overflow-x: auto;
  flex: 1 1 auto;
  font-family: 'Roboto Mono', monospace;
}

.vvb-input-1 input {
  padding-left: 0.5rem;
  padding-right: 0.5rem;

  border-style: solid;
  border-width: 1px;
  border-radius: 0.2em;

  min-width: 5em;
}

.vvb-input-1 input:focus {
  border-color: blue;
  box-shadow: inset 0 0 2px 2px blue;
}

.dark .vvb-input-1 input:focus {
  border-color: #4f46e5;
  box-shadow: inset 0 0 2px 2px #4f46e5;
}

.vvb-input-1.readonly input {
  pointer-events: none;
  background: none;
}

